[package]
name = "juicer"
version = "0.0.13"
edition = "2024"

[dependencies]
fetchlib = "0.0.13"
rpassword = "7.4.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
clap = {version = "4.6.0", features = ["derive", "env", "string"]}
once_cell = "1.21.4"
directories = "6.0.0"
